# minissd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  main.odin  test.ssd
.github/workflows/: tests.yml
example/: minissd_print.c  minissd_test.c
include/: minissd.h
src/: minissd.c
tests/: CMakeLists.txt
tests/src/: test_parser.cpp
